Use new (get/add)First methods